# hierarchical-naics-model

./: .coverage  .gitignore  Makefile  README.md  coverage.lcov  nested-vars-spec.md  pyproject.toml  pytest.ini  synthetic.parquet  todos.md
__OLD/: build_hierarchical_indices.py  calibration_cli.py  cli.py  diagnostics.py  make_backoff_resolver.py
__OLD/model/: __init__.py  add_group_coordinates_to_model.py  disable_random_effects.py
__OLD/tests/: test_calibration_cli.py  test_cli.py  test_diagnostics.py  test_diagnostics_branches.py  test_extract_effect_tables_branches.py  test_generate_synthetic_data.py  test_hierarchy_prefix_and_parents.py  test_param_recovery.py  test_param_recovery_full.py
artifacts/: artifacts.pkl
artifacts/e2e/: raw.parquet  synthetic.parquet
artifacts/e2e/dashboard/: model_dashboard.html
artifacts/e2e/model/: artifacts.pkl
src/hierarchical_naics_model/: __init__.py  build_conversion_model.py  build_hierarchical_indices.py  calibration_and_lift_report.py  calibration_cli.py  cli.py  diagnostics.py  extract_effect_tables.py  generate_synthetic_data.py  make_backoff_resolver.py  plot_calibration_and_lift.py  predict_proba.py  types.py
src/hierarchical_naics_model/__OLD/: build_conversion_model.py  logger.py  predict_proba.py  types.py
src/hierarchical_naics_model/cli/: __init__.py  fit.py  report.py  score.py
src/hierarchical_naics_model/core/: effects.py  hierarchy.py  scales.py  validation.py
src/hierarchical_naics_model/eval/: calibration.py  ranking.py  temporal.py
src/hierarchical_naics_model/io/: artifacts.py  artifacts_portable.py  datasets.py  schema.py
src/hierarchical_naics_model/model/: add_group_coordinates_to_model.py  get_naics_base.py  noncentered_normal_rv.py
tests/: conftest.py  test_build_conversion_model.py  test_build_conversion_model_branches.py  test_build_hierarchical_indices.py  test_build_hierarchical_indices_branches.py  test_build_hierarchical_indices_padding.py  test_cli.py  test_diagnostics.py  test_diagnostics_branches.py  test_diagnostics_happy.py  test_diagnostics_rhat_mean.py  test_e2e_pipeline.py  test_extract_effect_tables.py  test_generate_synthetic_data.py  test_hierarchical_shrinkage.py  test_hierarchy_prefix_and_parents.py  test_make_backoff_resolver.py  test_param_recovery_full.py  test_predict_proba_backoff.py  test_predict_proba_unit.py  test_scoring_backoff_and_padding.py
(+75 files in other folders)
