[project]
name = "hierarchical-naics-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "=", email = "=" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.8.3",
    "pandas>=2.3.2",
    "polars>=1.33.1",
]

[project.scripts]
hierarchical-naics-model = "hierarchical_naics_model:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
    "xenon>=0.9.3",
]
