[project]
dependencies=[
    "certifi>=2025.8.3",
    "kaleido>=1.1.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pymc>=5.0.0",
    "xarray>=2025.6.1",
]
description="Add your description here"
name="hierarchical-naics-model"
readme="README.md"
requires-python=">=3.10"
version="0.1.0"

    [project.scripts]
    hierarchical-naics-model="hierarchical_naics_model.cli:main"

[build-system]
build-backend="uv_build"
requires     =["uv_build>=0.8.22,<0.9.0"]

[dependency-groups]
dev=[
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "radon[toml]>=6.0.1",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
    "xenon>=0.9.3",
]


[tool.coverage.run]
omit=[
    "src/hierarchical_naics_model/cli/*",
    "src/hierarchical_naics_model/eval/*",
    "src/hierarchical_naics_model/io/*",
    "src/hierarchical_naics_model/scoring/*",
    "src/hierarchical_naics_model/tests/*",
]
[tool.pytest.ini_options]
addopts      ="-q -m \"not slow\""
markers      ="slow: runs short NUTS or CLI e2e; excluded from default CI"
norecursedirs=["__OLD"]
